# ss9k

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.org  config.example.toml  config.toml.example  roadmap.org  rustfmt.toml
.github/workflows/: build.yml  release.yml
src/: audio.rs  commands.rs  lookups.rs  main.rs  model.rs  vad.rs
